Some minor requested changes